--- a/section-pricing/styles.scss
+++ b/section-pricing/styles.scss
@@ -8,8 +8,10 @@ body {
     background-image: url(img/back.jpg);
 }
 
+
+
 // -----------------------------------header
-@import'./header';
+@import"./navbar";
 // -----------------------------------header
 // --------------------------------responcive
 @mixin resp($size) {
