--- a/a propos (omar)/_footer.scss
+++ b/a propos (omar)/_footer.scss
@@ -14,7 +14,7 @@ footer {
     text-align: center;
     height: 355px;
 
-    @include mq(375px) {
+    @include mq(625px) {
         height: auto;
 
     }
@@ -29,7 +29,7 @@ footer {
         position: relative;
         top: 30px;
 
-        @include mq(375px) {
+        @include mq(625px) {
             right: 10px;
         }
 
@@ -55,7 +55,7 @@ footer {
 
             transition: all 0.4s ease-in-out;
 
-            @include mq(375px) {
+            @include mq(625px) {
                 top: 35px;
                 font-size: 30px;
 
@@ -69,7 +69,7 @@ footer {
             font-weight: normal;
             transition: all 0.3s ease-in-out;
 
-            @include mq(375px) {
+            @include mq(625px) {
                 font-size: 30px;
 
             }
@@ -80,7 +80,7 @@ footer {
 .footer-content {
     margin-top: 60px;
 
-    @include mq(375px) {
+    @include mq(625px) {
 
         display: grid;
         grid-template-columns: 1fr;
@@ -88,6 +88,7 @@ footer {
         grid-template-areas: "form"
             "contact"
             "icon";
+        justify-items: center;
 
 
     }
@@ -99,7 +100,8 @@ footer {
     float: left;
     width: 33%;
 
-    @include mq(800px) {
+
+    @include mq(998px) {
         width: 32.90%;
     }
 
@@ -107,7 +109,7 @@ footer {
         width: 32.80%;
     }
 
-    @include mq(375px) {
+    @include mq(625px) {
         float: none;
     }
 
@@ -124,7 +126,7 @@ footer {
 
         }
 
-        @include mq(375px) {
+        @include mq(625px) {
             grid-area: contact;
             margin-left: auto;
             margin-right: auto;
@@ -132,10 +134,18 @@ footer {
 
             .cnt {
                 position: relative;
-                right: 35px;
+
             }
 
         }
+
+        @include mq(375px) {
+            .cnt {
+                position: relative;
+                right: 35px;
+            }
+        }
+
 
         h4 {
             font-weight: 100;
@@ -155,7 +165,7 @@ footer {
         margin-left: 10px;
 
 
-        @include mq(375px) {
+        @include mq(625px) {
             grid-area: form;
 
         }
@@ -172,9 +182,24 @@ footer {
             width: 160px;
             transition: .4s ease-in-out;
 
-            @include mq(375px) {
-                margin-left: 55%;
+            @include mq(625px) {
+                position: relative;
+                right: 10%;
+
+
+
+
             }
+
+            @include mq(420px) {
+                position: relative;
+                right: 40%;
+
+
+
+
+            }
+
 
             &::placeholder {
                 color: #ffffff80;
@@ -183,8 +208,10 @@ footer {
             &:focus {
                 width: 230px;
 
-                @include mq(375px) {
+                @include mq(625px) {
                     width: 160px;
+
+
 
                 }
             }
@@ -198,10 +225,7 @@ footer {
             border-radius: 50px;
             transition: .5S;
 
-            @include mq(375px) {
-                margin-left: 115%;
-
-            }
+            @include mq(625px) {}
 
             &:hover {
                 background-color: #8561be;
@@ -215,9 +239,9 @@ footer {
 
     .footer-icon {
 
-        @include mq(375px) {
+        @include mq(625px) {
             grid-area: icon;
-            margin-left: 35%;
+
 
         }
 
@@ -240,7 +264,7 @@ footer {
             color: rgb(165, 164, 164);
             border-radius: 50%;
 
-            @include mq(375px) {
+            @include mq(625px) {
                 padding-right: 10px;
 
 
