--- a/a propos (omar)/style.scss
+++ b/a propos (omar)/style.scss
@@ -2,11 +2,12 @@
     width: 100%;
     height: 610px;
     margin-top: -4px;
-    box-sizing: border-box;  
+    box-sizing: border-box; 
+  
 }
 
 @import"./navbar";
-@import "./footer";
+@import"./footer";
 
 .menu{
 
@@ -22,7 +23,7 @@
 }
 
 body {
-  width: 100%;
+  
   font-family: 'Montserrat', sans-serif;
 
 }
@@ -33,21 +34,21 @@ body {
 
    height: 600px;
    background-attachment:fixed;
-   width: 100%;
+   
    @media screen and (max-width:800px){
        background-position: center;
    }
 
 
 
-  /*.abg{
+  .abg{
        width: 100%;
-       height: 600px;
+       height: 496px;
        position: absolute;
        z-index: 2;
        background-color: rgba($color: #7d54be, $alpha: .7);
     
-   }  */
+   }  
 }
 
 .center{
@@ -366,11 +367,11 @@ body {
 
 /*--------------------------------------------------------------------*/
 
-@media screen and (max-width:800px){
+@media screen and (max-width:1130px){
   
   @mixin mix {
 
-    width: 410px;
+    width: 100%;
     height: 700px;
 
       
@@ -382,12 +383,12 @@ body {
         grid:grid;
         grid-template-columns: repeat(2,1fr);
         grid-template-rows: repeat(4,1fr);
-        width: 800px
+        width: 100%;
      }
 
      .aheader {
 
-        width: 820px;
+        width: 100%;
      }
 
 
@@ -465,7 +466,7 @@ body {
 
  /*------------------------------------------------------------------------*/
 
- @media screen and (max-width:375px){
+ @media screen and (max-width:751px){
 
     .afixed {
 
@@ -473,14 +474,14 @@ body {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(9,1fr);
 
-       width: 375px;
+      width: 100%;
     }  
 
 
 
     @mixin mobile {
 
-        width: 375px;
+      width: 100%;
         box-sizing: border-box;   
     }
 
@@ -504,8 +505,7 @@ body {
 
     .aheader {
         
-        width: 375px;
-        
+        width: 100%;
     }
 
     .aqui{
