--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -7,159 +7,84 @@ body {
   background-image: url(img/back.jpg);
 }
 
-.back img {
-  width: 100%;
-  height: 650px;
-}
-
-@media (max-width: 375px) {
-  .back img {
-    height: 500px;
-  }
-}
-
-.back h1 {
-  position: absolute;
-  margin-top: -500px;
-  margin-left: 35%;
-  font-size: 50px;
-  color: white;
-  text-decoration: none;
-}
-
-@media (max-width: 900px) {
-  .back h1 {
-    margin-right: 100%;
-  }
-}
-
-@media (max-width: 375px) {
-  .back h1 {
-    margin-top: -100%;
-    margin-left: 0;
-    text-align: start;
-  }
-}
-
-@media (max-width: 700px) {
-  .back h1 {
-    margin-left: 30%;
-  }
-}
-
-@media (max-width: 700px) {
-  .back h1 {
-    margin-left: 10%;
-  }
-}
-
-.back p {
-  width: 50%;
-  position: absolute;
-  margin-top: -400px;
-  margin-left: 27%;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-}
-
-@media (max-width: 900px) {
-  .back p {
-    margin-top: -40%;
-  }
-}
-
-@media (max-width: 375px) {
-  .back p {
-    width: 70%;
-    text-align: start;
-    margin-left: 0;
-    margin-top: -50%;
-  }
-}
-
-.fas.fa-ellipsis-h {
-  padding-right: 30px;
-}
-
-.header {
-  position: fixed;
-  margin-top: -20px;
-  height: 100px;
-  padding: 0 10px;
+.hilmi-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: wrap row;
+          flex-flow: wrap row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 100%;
   color: white;
   background: #8f25D6;
-  opacity: .9;
-  z-index: 20;
-  width: 102%;
-  margin-left: -50px;
+  height: 100px;
 }
 
-@media (max-width: 375px) {
-  .header {
-    width: 100%;
-  }
-}
-
-@media (max-width: 900px) {
-  .header {
-    margin-left: 0px;
-    padding: 0;
-  }
+.hilmi-header ul {
+  padding: 0;
 }
 
 .logo {
   line-height: 100px;
-  float: left;
   color: #8f25D6;
-  margin-left: 60px;
-  font-size: 35px;
-  margin-top: 15px;
+  font-size: 2rem;
   color: white;
   cursor: pointer;
+  margin-left: 20px;
+  position: relative;
+  bottom: 28px;
 }
 
-@media (max-width: 900px) {
-  .logo {
-    margin: 0px;
-    margin-left: 10px;
-  }
-}
-
-@media (max-width: 375px) {
+@media (max-width: 400px) {
   .logo {
     font-size: 30px;
   }
 }
 
 .menu {
-  float: right;
-  line-height: 100px;
-  margin-left: 240px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 968px) {
   .menu {
     margin-right: 0px;
   }
 }
 
 .menu a {
+  margin: 0 20px 48px 20px;
+  padding: 10px 30px;
   color: white;
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  padding: 0 40px;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+@media (max-width: 1215px) {
+  .menu a {
+    padding: 10px 20px;
+    margin: 0 10px 48px 10px;
+  }
 }
 
 .menu a:hover {
   background-color: white;
   border-radius: 30px;
-  padding: 10px;
-  padding-right: 20px;
-  font-style: unset;
+  padding: 10px 30px;
   color: #8f25D6;
   -webkit-transition: .5s;
   transition: .5s;
@@ -180,42 +105,60 @@ body {
 
 .show-menu-btn i {
   line-height: 100px;
+  margin: 8px 20px 50px 9px;
 }
 
 #chk {
   position: absolute;
-  visibility: hidden;
+  display: none;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 968px) {
   .show-menu-btn,
   .hide-menu-btn {
     display: block;
   }
   .menu {
-    position: fixed;
+    display: none;
     width: 100%;
     height: 100vh;
     background: #8f25D6;
     right: -100%;
-    top: 0;
     text-align: center;
     padding: 80px 0;
     line-height: normal;
     -webkit-transition: 0.7s;
     transition: 0.7s;
     z-index: 10;
+    position: relative;
+    bottom: 80px;
   }
   .menu a {
-    display: block;
-    padding: 20px;
+    margin: 20px;
   }
   .hide-menu-btn {
     position: absolute;
-    top: 40px;
-    right: 40px;
+    top: 550px;
+    right: 315px;
   }
+}
+
+@media (max-width: 968px) and (max-width: 400px) {
+  .hide-menu-btn {
+    display: none;
+  }
+}
+
+@media (max-width: 968px) {
   #chk:checked ~ .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    opacity: 0.7;
     right: 0;
   }
 }
