--- a/service/style.scss
+++ b/service/style.scss
@@ -3,14 +3,11 @@ $color2: #fff;
 $color:#000;
 $font-family: 'Montserrat',
 sans-serif;
+
 body {
     font-family: 'Montserrat', sans-serif;
     width: 100%;
     margin: 0px;
-}
-
-.service {
-    margin-top: 140px;
 }
 
 .stitre {
@@ -25,10 +22,8 @@ body {
 }
 
 .svideo {
-    width: 900px;
-    height: 300px;
-    position: relative;
-    left: 160px;
+    width: 80%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -138,16 +133,19 @@ body {
         margin: 0;
         padding: 0;
     }
+
     .Ssection1 {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
+
     .svideo {
         @media (max-width: 1130px) {
             margin-top: 5%;
             display: flex;
         }
     }
+
     .Spara {
         font-size: 70%;
         text-align: center;
@@ -155,43 +153,53 @@ body {
         right: 1%;
         margin-bottom: 80px;
     }
+
     .stitre {
         font-size: 150%;
         margin-bottom: -12px;
     }
+
     .Spart1 {
         font-size: 90%;
     }
+
     .Ssection1 i {
         font-size: 300%;
     }
+
     .para1 {
         font-size: 80%;
         padding: 8%;
         position: relative;
     }
+
     .btn {
         height: 29px;
         width: 100px;
         padding: 200px;
     }
+
     .StitreD {
         font-size: 120%;
         margin: 10px;
         line-height: 150%;
     }
+
     .StitreF {
         font-size: 100%;
         margin-top: -20px;
     }
+
     .sp2 {
         font-size: 100%;
     }
+
     .btb {
         width: 200px;
         height: 55px;
         font-size: 80%;
     }
+
     .ser {
         font-size: 100%;
         margin: 10px;
@@ -199,11 +207,13 @@ body {
         right: 15px;
         padding: 3%;
     }
+
     .btR {
         height: 1px;
         width: 70px;
         font-size: 70%;
     }
+
     i.fab {
         font-size: 30px;
     }
@@ -217,11 +227,13 @@ body {
     border-radius: 2%;
     margin: 10px;
     border-left: 10px $color1 solid;
+
     @media (max-width: 781px) {
         margin: 0;
         margin-bottom: 20%;
         margin-left: 10px;
     }
+
     @media (max-width:375px) {
         margin: 0;
         margin-bottom: 10%;
@@ -261,52 +273,74 @@ body {
 
 /*mobile*/
 
-@media (max-width:375px) {
+@media (max-width:600px) {
     body {
         width: 375;
         padding: 0;
         margin: 0;
     }
+
     .stitre {
         font-size: 190%;
         margin-right: 10%;
     }
+
     .svideo {
         width: 450px;
         margin-left: -5px;
+
+        @media (max-width:500px) {
+            margin-bottom: 10px;
+            ;
+        }
     }
+
     .Spara {
         font-size: 120%;
         max-width: 80%;
         margin-left: 90px;
     }
+
     .Ssection1 {
-        display: grid;
-        grid-template-columns: 1fr;
+        @media (max-width:500px) {
+            margin-left: 40px;
+        }
+
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+
     }
+
     .Spart1 {
         font-size: 120%;
     }
+
     .para1 {
         font-size: 70%;
         padding: 10%;
     }
+
     .btn {
         width: 120px;
         height: 40px;
         margin-top: 20%;
     }
+
     .StitreD {
         margin: 10%;
         position: relative;
         right: 20px;
+        line-height: 50px;
     }
+
     .StitreF {
         margin-right: 30%;
         position: relative;
         bottom: 60px;
         margin-left: 150px;
     }
+
     .btb {
         position: relative;
         bottom: 50px;
@@ -315,47 +349,46 @@ body {
         height: 80px;
         width: 300px;
     }
+
     .btR {
         font-size: 130%;
         height: 50px;
         width: 110px;
     }
-    .ser {
-        font-size: 130%;
-        position: relative;
-        right: 1px;
-        bottom: 10px;
-    }
+
     i.fab {
         font-size: 40px;
         margin-left: 10px;
     }
-    @media (max-width:650px) {
-        margin-top: 10%;
-    }
+
     .Spara {
         font-size: 120%;
         max-width: 80%;
         margin-left: 90px;
     }
+
     .Spart1 {
         font-size: 120%;
     }
+
     .para1 {
         font-size: 70%;
         padding: 10%;
     }
+
     .btn {
         width: 120px;
         height: 40px;
         margin-top: 20%;
     }
+
     .StitreF {
         margin-right: 30%;
         position: relative;
         bottom: 60px;
         margin-left: 150px;
     }
+
     .btb {
         position: relative;
         bottom: 50px;
@@ -364,20 +397,14 @@ body {
         height: 80px;
         width: 300px;
     }
+
     .btR {
         font-size: 130%;
         height: 50px;
         width: 110px;
     }
-    .ser {
-        font-size: 130%;
-        position: relative;
-        right: 1px;
-        bottom: 10px;
-    }
-}
 
 
-}
 
-/***********************************fin verssion mobile*************************************************************************/
+
+    /***********************************fin verssion mobile*************************************************************************/
