--- a/service/style.scss
+++ b/service/style.scss
@@ -134,10 +134,10 @@ body {
         padding: 0;
     }
 
-    .Ssection1 {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
+    // .Ssection1 {
+    //     display: grid;
+    //     grid-template-columns: 1fr 1fr;
+    // }
 
     .svideo {
         @media (max-width: 1130px) {
@@ -403,8 +403,3 @@ body {
         height: 50px;
         width: 110px;
     }
-
-
-
-
-    /***********************************fin verssion mobile*************************************************************************/
