--- a/section-pricing/styles.scss
+++ b/section-pricing/styles.scss
@@ -247,7 +247,8 @@ h1 {
 }
 
 .section2 {
-    margin: 60px auto;
+    margin: 0px auto;
+    margin-top: -100px;
     .pricing {
         text-align: center;
         width: 80%;
