--- a/footer/style.css
+++ b/footer/style.css
@@ -1,10 +1,11 @@
+@charset "UTF-8";
 body {
+  margin: 0px;
+  padding: 0px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-color: #EEEEEE;
   font-family: 'Montserrat';
-  margin: 0;
-  padding: 0;
 }
 
 .fsection1 {
@@ -14,13 +15,18 @@ body {
   height: 500px;
 }
 
+@media (max-width: 800px) {
+  .fsection1 {
+    margin-right: 0;
+  }
+}
+
 .fcontact {
   color: #ffffff;
-  text-transform: capitalize;
   text-align: center;
   position: relative;
   top: 200PX;
-  font-size: 70px;
+  font-size: 99px;
   margin-top: 0;
 }
 
@@ -30,8 +36,7 @@ body {
 
 @media (max-width: 375px) {
   .fcontact {
-    font-size: 40px;
-    padding: 30px;
+    font-size: 50px;
   }
 }
 
@@ -39,69 +44,130 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 10px auto 0;
-  width: 60%;
-}
-
-@media (max-width: 800px) {
-  .finputs {
-    width: 80%;
-  }
-}
-
-.finputs .finputs1 {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row;
-          flex-flow: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-top: 3%;
+  width: 100%;
+  margin-left: 5%;
 }
 
-@media (max-width: 800px) {
-  .finputs .finputs1 {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
+@media (max-width: 375px) {
+  .finputs {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 
-.finputs .finputs1 .non {
-  width: 80%;
+.non {
+  width: 350px;
   height: 40px;
-  margin: 10px;
+  border-radius: 10px;
+  border: 1.3px solid #bc93fd;
+  position: relative;
+  left: 450px;
+}
+
+@media (max-width: 800px) {
+  .non {
+    position: relative;
+    left: 80px;
+    width: 200px;
+  }
+}
+
+.numéro {
+  width: 350px;
+  height: 40px;
+  border-radius: 10px;
+  border: 1.3px solid #bc93fd;
+  position: relative;
+  top: 65px;
+  left: 95px;
+}
+
+@media (max-width: 800px) {
+  .numéro {
+    position: relative;
+    width: 200px;
+    top: 20px;
+    left: 80px;
+  }
+}
+
+.adres {
+  width: 350px;
+  height: 40px;
+  margin-bottom: 20px;
+  margin-left: 22%;
   border-radius: 10px;
   border: 1.3px solid #bc93fd;
 }
 
-.finputs .message {
+@media (max-width: 800px) {
+  .adres {
+    width: 200px;
+    position: relative;
+    right: 60px;
+  }
+}
+
+.votre {
+  width: 350px;
+  height: 40px;
+  margin-left: 22%;
+  border-radius: 10px;
+  border: 1.3px solid #bc93fd;
+}
+
+@media (max-width: 800px) {
+  .votre {
+    width: 200px;
+    position: relative;
+    right: 58px;
+  }
+}
+
+.message {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 99%;
+  width: 41%;
+  margin-left: 540px;
   height: 250px;
+  margin-top: 20px;
+  padding-bottom: 10%;
+  margin-bottom: 30px;
   border-radius: 10px;
-  margin: 10px 10px;
   border: 1.3px solid #bc93fd;
-  padding-bottom: 200px;
+}
+
+@media (max-width: 800px) {
+  .message {
+    margin-left: 100px;
+    width: 70%;
+    height: 250px;
+    position: relative;
+    right: -20px;
+    padding: 25px 0 200px 5px;
+  }
+}
+
+@media (max-width: 800px) and (max-width: 375px) {
+  .message {
+    margin-left: 35px;
+    height: 50px;
+    padding: 25px 0 200px 5px;
+  }
+}
+
+@media (max-width: 375px) {
+  .fparti2 {
+    margin-top: 50px;
+    margin-left: 50px;
+  }
 }
 
 footer {
