--- a/service/style.css
+++ b/service/style.css
@@ -141,12 +141,6 @@ body {
     margin: 0;
     padding: 0;
   }
-  .Ssection1 {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-  }
 }
 
 @media (max-width: 781px) and (max-width: 1130px) {
@@ -445,7 +439,7 @@ body {
     margin-right: 10%;
   }
   .svideo {
-    width: 450px;
+    width: 100%;
     margin-left: -5px;
   }
 }
@@ -475,9 +469,15 @@ body {
   }
 }
 
+@media (max-width: 600px) and (max-width: 600px) {
+  .Ssection1 {
+    margin-left: 20%;
+  }
+}
+
 @media (max-width: 600px) and (max-width: 500px) {
   .Ssection1 {
-    margin-left: 40px;
+    margin-left: 10%;
   }
 }
 
@@ -544,7 +544,8 @@ body {
     margin-right: 30%;
     position: relative;
     bottom: 60px;
-    margin-left: 150px;
+    margin-left: 100px;
+    line-height: 40px;
   }
   .btb {
     position: relative;
@@ -559,10 +560,5 @@ body {
     height: 50px;
     width: 110px;
   }
-  .ssection3 {
-    width: 500px;
-  }
 }
-
-/***********************************fin verssion mobile*************************************************************************/
 /*# sourceMappingURL=style.css.map */
