--- a/service/style.scss
+++ b/service/style.scss
@@ -134,11 +134,6 @@ body {
         padding: 0;
     }
 
-    // .Ssection1 {
-    //     display: grid;
-    //     grid-template-columns: 1fr 1fr;
-    // }
-
     .svideo {
         @media (max-width: 1130px) {
             margin-top: 5%;
@@ -286,12 +281,12 @@ body {
     }
 
     .svideo {
-        width: 450px;
+        width: 100%;
         margin-left: -5px;
 
         @media (max-width:500px) {
             margin-bottom: 10px;
-            ;
+
         }
     }
 
@@ -302,8 +297,14 @@ body {
     }
 
     .Ssection1 {
+        @media (max-width:600px) {
+            margin-left: 20%;
+
+        }
+
         @media (max-width:500px) {
-            margin-left: 40px;
+            margin-left: 10%;
+
         }
 
         display: flex;
@@ -386,7 +387,8 @@ body {
         margin-right: 30%;
         position: relative;
         bottom: 60px;
-        margin-left: 150px;
+        margin-left: 100px;
+        line-height: 40px;
     }
 
     .btb {
@@ -403,3 +405,4 @@ body {
         height: 50px;
         width: 110px;
     }
+}
