--- a/section-pricing/styles.css
+++ b/section-pricing/styles.css
@@ -7,147 +7,84 @@ body {
   background-image: url(img/back.jpg);
 }
 
-.back img {
-  width: 100%;
-  height: 650px;
-}
-
-@media (max-width: 375px) {
-  .back img {
-    height: 500px;
-  }
-}
-
-.back h1 {
-  position: absolute;
-  margin-top: -500px;
-  margin-left: 35%;
-  font-size: 50px;
-  color: white;
-  text-decoration: none;
-}
-
-@media (max-width: 800px) {
-  .back h1 {
-    margin-right: 100%;
-  }
-}
-
-@media (max-width: 375px) {
-  .back h1 {
-    margin-top: -100%;
-    margin-left: 0;
-    text-align: start;
-  }
-}
-
-.back p {
-  width: 50%;
-  position: absolute;
-  margin-top: -400px;
-  margin-left: 27%;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-}
-
-@media (max-width: 800px) {
-  .back p {
-    margin-top: -40%;
-  }
-}
-
-@media (max-width: 375px) {
-  .back p {
-    width: 70%;
-    text-align: start;
-    margin-left: 0;
-    margin-top: -50%;
-  }
-}
-
-.fas.fa-ellipsis-h {
-  padding-right: 30px;
-}
-
-.header {
-  position: fixed;
-  margin-top: -20px;
-  height: 100px;
-  padding: 0 10px;
+.hilmi-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: wrap row;
+          flex-flow: wrap row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 100%;
   color: white;
   background: #8f25D6;
-  opacity: .9;
-  z-index: 20;
-  width: 102%;
-  margin-left: -50px;
+  height: 100px;
 }
 
-@media (max-width: 375px) {
-  .header {
-    width: 100%;
-  }
-}
-
-@media (max-width: 800px) {
-  .header {
-    margin-left: 0px;
-    padding: 0;
-  }
+.hilmi-header ul {
+  padding: 0;
 }
 
 .logo {
   line-height: 100px;
-  float: left;
   color: #8f25D6;
-  margin-left: 60px;
-  font-size: 35px;
-  margin-top: 15px;
+  font-size: 2rem;
   color: white;
   cursor: pointer;
+  margin-left: 20px;
+  position: relative;
+  bottom: 28px;
 }
 
-@media (max-width: 800px) {
-  .logo {
-    margin: 0px;
-    margin-left: 10px;
-  }
-}
-
-@media (max-width: 375px) {
+@media (max-width: 400px) {
   .logo {
     font-size: 30px;
   }
 }
 
 .menu {
-  float: right;
-  line-height: 100px;
-  margin-left: 240px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 968px) {
   .menu {
     margin-right: 0px;
   }
 }
 
 .menu a {
+  margin: 0 20px 48px 20px;
+  padding: 10px 30px;
   color: white;
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  padding: 0 40px;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+@media (max-width: 1215px) {
+  .menu a {
+    padding: 10px 20px;
+    margin: 0 10px 48px 10px;
+  }
 }
 
 .menu a:hover {
   background-color: white;
   border-radius: 30px;
-  padding: 10px;
-  padding-right: 20px;
-  font-style: unset;
+  padding: 10px 30px;
   color: #8f25D6;
   -webkit-transition: .5s;
   transition: .5s;
@@ -168,42 +105,60 @@ body {
 
 .show-menu-btn i {
   line-height: 100px;
+  margin: 8px 20px 50px 9px;
 }
 
 #chk {
   position: absolute;
-  visibility: hidden;
+  display: none;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 968px) {
   .show-menu-btn,
   .hide-menu-btn {
     display: block;
   }
   .menu {
-    position: fixed;
+    display: none;
     width: 100%;
     height: 100vh;
     background: #8f25D6;
     right: -100%;
-    top: 0;
     text-align: center;
     padding: 80px 0;
     line-height: normal;
     -webkit-transition: 0.7s;
     transition: 0.7s;
     z-index: 10;
+    position: relative;
+    bottom: 80px;
   }
   .menu a {
-    display: block;
-    padding: 20px;
+    margin: 20px;
   }
   .hide-menu-btn {
     position: absolute;
-    top: 40px;
-    right: 40px;
+    top: 550px;
+    right: 315px;
   }
+}
+
+@media (max-width: 968px) and (max-width: 400px) {
+  .hide-menu-btn {
+    display: none;
+  }
+}
+
+@media (max-width: 968px) {
   #chk:checked ~ .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    opacity: 0.7;
     right: 0;
   }
 }
@@ -241,6 +196,12 @@ h1 {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     grid-row-gap: 10px;
+  }
+}
+
+@media (max-width: 900px) {
+  .testimonaile {
+    grid-column-gap: 10px;
   }
 }
 
@@ -677,8 +638,55 @@ h1 {
 
 @media (max-width: 375px) {
   .section2 .pricing {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
     width: 300px;
     overflow: scroll;
+  }
+  .section2 .pricing .standard {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .section2 .pricing .professionnel {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+  }
+  .section2 .pricing .demande {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
+    grid-column: 3/4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+}
+
+@media (max-width: 900px) {
+  .section2 .pricing {
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .section2 .pricing {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (2fr)[1];
+        grid-template-columns: repeat(1, 2fr);
+  }
+  .section2 .pricing .standard {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .section2 .pricing .professionnel {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
   }
 }
 
@@ -1123,7 +1131,7 @@ footer {
   height: 355px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer {
     height: auto;
   }
@@ -1138,7 +1146,7 @@ footer .projet {
   top: 30px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .projet {
     right: 10px;
   }
@@ -1163,7 +1171,7 @@ footer .projet i {
   transition: all 0.4s ease-in-out;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .projet i {
     top: 35px;
     font-size: 30px;
@@ -1178,7 +1186,7 @@ footer .projet h3 {
   transition: all 0.3s ease-in-out;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .projet h3 {
     font-size: 30px;
   }
@@ -1188,7 +1196,7 @@ footer .projet h3 {
   margin-top: 60px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   .footer-content {
     display: -ms-grid;
     display: grid;
@@ -1196,7 +1204,8 @@ footer .projet h3 {
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr .4fr 0.4fr;
         grid-template-rows: 1fr .4fr 0.4fr;
-        grid-template-areas: "form" "contact" "icon";
+        grid-template-areas: "form" "contact" "icon";
+    justify-items: center;
   }
 }
 
@@ -1205,13 +1214,19 @@ footer .projet h3 {
   width: 33%;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 998px) {
   .flaot {
     width: 32.90%;
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 767px) {
+  .flaot {
+    width: 32.80%;
+  }
+}
+
+@media (max-width: 625px) {
   .flaot {
     float: none;
   }
@@ -1229,13 +1244,19 @@ footer .contact {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .contact {
     grid-area: contact;
     margin-left: auto;
     margin-right: auto;
     margin-top: -10px;
   }
+  footer .contact .cnt {
+    position: relative;
+  }
+}
+
+@media (max-width: 375px) {
   footer .contact .cnt {
     position: relative;
     right: 35px;
@@ -1257,7 +1278,7 @@ footer .form {
   margin-left: 10px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .form {
     grid-area: form;
   }
@@ -1276,9 +1297,17 @@ footer .form .text-input {
   transition: .4s ease-in-out;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .form .text-input {
-    margin-left: 55%;
+    position: relative;
+    right: 10%;
+  }
+}
+
+@media (max-width: 420px) {
+  footer .form .text-input {
+    position: relative;
+    right: 40%;
   }
 }
 
@@ -1302,7 +1331,7 @@ footer .form .text-input:focus {
   width: 230px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .form .text-input:focus {
     width: 160px;
   }
@@ -1318,22 +1347,15 @@ footer .form .submit-input {
   transition: .5S;
 }
 
-@media (max-width: 375px) {
-  footer .form .submit-input {
-    margin-left: 115%;
-  }
-}
-
 footer .form .submit-input:hover {
   background-color: #8561be;
   color: white;
   border: 1px solid #8561be;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .footer-icon {
     grid-area: icon;
-    margin-left: 35%;
   }
 }
 
@@ -1364,7 +1386,7 @@ footer .footer-icon .icon-link {
   border-radius: 50%;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 625px) {
   footer .footer-icon .icon-link {
     padding-right: 10px;
   }
