--- a/service/style.scss
+++ b/service/style.scss
@@ -22,12 +22,15 @@ body {
 }
 
 .svideo {
+    width: 80%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     margin: auto;
     width: 99%;
 }
+
 .Spara {
     text-align: center;
     text-decoration: underline $color1;
@@ -89,10 +92,10 @@ body {
     transition: 10s;
     overflow: hidden;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            background-color: rgb(221, 230, 226);
-            box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-            color: #fff;
-            transform: translateY(-7px);
+    background-color: rgb(221, 230, 226);
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
 }
 
 .Ssection1 i {
@@ -102,7 +105,6 @@ body {
 .ser {
     position: relative;
     right: 50px;
-
 }
 
 .StitreF {
@@ -118,19 +120,27 @@ body {
 .fab {
     margin: 1px 40px;
     border-radius: 500px;
-
 }
+
+
 /****************************************fin de version desktop*************************************************/
 
-/***********************************************tablet************************************************************/
-@media (max-width:1130px) {
+
+/*tablet*/
+
+@media (max-width:781px) {
     body {
         margin: 0;
         padding: 0;
     }
 
+    .Ssection1 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
     .svideo {
-        @media (max-width:1130px) {
+        @media (max-width: 1130px) {
             margin-top: 5%;
             display: flex;
         }
@@ -173,8 +183,6 @@ body {
         font-size: 120%;
         margin: 10px;
         line-height: 150%;
-
-
     }
 
     .StitreF {
@@ -208,9 +216,7 @@ body {
 
     i.fab {
         font-size: 30px;
-
     }
-
 }
 
 @mixin shad {
@@ -222,7 +228,7 @@ body {
     margin: 10px;
     border-left: 10px $color1 solid;
 
-    @media (max-width:781px) {
+    @media (max-width: 781px) {
         margin: 0;
         margin-bottom: 20%;
         margin-left: 10px;
@@ -234,7 +240,6 @@ body {
         margin-left: 9%;
         width: 250px;
     }
-
 }
 
 .Spartie3 {
@@ -266,69 +271,140 @@ body {
 
 @import"./style";
 
-/****************************************mobile******************************************************************/
+/*mobile*/
 
-@media (max-width:650px) {
+@media (max-width:600px) {
+    body {
+        width: 375;
+        padding: 0;
+        margin: 0;
+    }
+
     .stitre {
         font-size: 190%;
         margin-right: 10%;
     }
 
     .svideo {
-        @media (max-width:650px) {
-            margin-top: 10%;
+        width: 450px;
+        margin-left: -5px;
+
+        @media (max-width:500px) {
+            margin-bottom: 10px;
+            ;
+        }
+    }
+
+    .Spara {
+        font-size: 120%;
+        max-width: 80%;
+        margin-left: 90px;
+    }
+
+    .Ssection1 {
+        @media (max-width:500px) {
+            margin-left: 40px;
         }
 
-
-
-        .Spara {
-            font-size: 120%;
-            max-width: 80%;
-            margin-left: 90px;
-        }
-        .Spart1 {
-            font-size: 120%;
-        }
-
-        .para1 {
-            font-size: 70%;
-            padding: 10%;
-        }
-
-        .btn {
-            width: 120px;
-            height: 40px;
-            margin-top: 20%;
-        }
-        .StitreF {
-            margin-right: 30%;
-            position: relative;
-            bottom: 60px;
-            margin-left: 150px;
-        }
-        .btb {
-            position: relative;
-            bottom: 50px;
-            margin-right: 40px;
-            font-size: 130%;
-            height: 80px;
-            width: 300px;
-        }
-
-        .btR {
-            font-size: 130%;
-            height: 50px;
-            width: 110px;
-        }
-
-        .ser {
-            font-size: 130%;
-            position: relative;
-            right: 1px;
-            bottom: 10px;
-        }
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
 
     }
 
-}
-/***********************************fin verssion mobile*************************************************************************/
+    .Spart1 {
+        font-size: 120%;
+    }
+
+    .para1 {
+        font-size: 70%;
+        padding: 10%;
+    }
+
+    .btn {
+        width: 120px;
+        height: 40px;
+        margin-top: 20%;
+    }
+
+    .StitreD {
+        margin: 10%;
+        position: relative;
+        right: 20px;
+        line-height: 50px;
+    }
+
+    .StitreF {
+        margin-right: 30%;
+        position: relative;
+        bottom: 60px;
+        margin-left: 150px;
+    }
+
+    .btb {
+        position: relative;
+        bottom: 50px;
+        margin-right: 40px;
+        font-size: 130%;
+        height: 80px;
+        width: 300px;
+    }
+
+    .btR {
+        font-size: 130%;
+        height: 50px;
+        width: 110px;
+    }
+
+    i.fab {
+        font-size: 40px;
+        margin-left: 10px;
+    }
+
+    .Spara {
+        font-size: 120%;
+        max-width: 80%;
+        margin-left: 90px;
+    }
+
+    .Spart1 {
+        font-size: 120%;
+    }
+
+    .para1 {
+        font-size: 70%;
+        padding: 10%;
+    }
+
+    .btn {
+        width: 120px;
+        height: 40px;
+        margin-top: 20%;
+    }
+
+    .StitreF {
+        margin-right: 30%;
+        position: relative;
+        bottom: 60px;
+        margin-left: 150px;
+    }
+
+    .btb {
+        position: relative;
+        bottom: 50px;
+        margin-right: 40px;
+        font-size: 130%;
+        height: 80px;
+        width: 300px;
+    }
+
+    .btR {
+        font-size: 130%;
+        height: 50px;
+        width: 110px;
+    }
+
+
+
+
+    /***********************************fin verssion mobile*************************************************************************/
