--- a/a propos (omar)/style.scss
+++ b/a propos (omar)/style.scss
@@ -46,7 +46,7 @@ body {
        height: 496px;
        position: absolute;
        z-index: 2;
-       background-color: rgba($color: #7d54be, $alpha: .7);
+       background-color: rgba($color: #8612b4, $alpha: .7);
     
    }  
 }
