--- a/service/style.css
+++ b/service/style.css
@@ -59,6 +59,7 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: auto;
+  width: 1200px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
