--- a/style1.scss
+++ b/style1.scss
@@ -338,7 +338,7 @@
              }
          }
          
-         @import "./footer";
+         @import'./footer';
          footer {
              width: 99vw
          }
