--- a/Scss/_firstsection.scss
+++ b/Scss/_firstsection.scss
@@ -1,27 +1,22 @@
 .hsec1 {
     .hgrid {
-        max-height: fit-content;
         width: 99vw;
+        display: grid;
+        grid-template-columns: 50% auto;
         @include mobile() {
-            height: 100%;
             height: 100%;
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr 1fr;
         }
-        height: 400px;
-        display: grid;
-        grid-template-columns: 50% auto;
     }
     .hleft {
-        background-image: url(Images/workplace-1245776_1920.jpg);
+        background-image: url(/Images/workplace-1245776_1920.jpg);
         background-size: cover;
+        height: 50vh;
         box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, .288);
         &:hover {
             box-shadow: inset -4px -4px 8px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, .288);
-        }
-        @include mobile() {
-            height: 400px;
         }
     }
     .hright {
@@ -29,38 +24,38 @@
         &:hover {
             box-shadow: inset -4px -4px 8px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, .288);
         }
-        @include mobile() {
-            max-height: 400px;
-        }
+        height: 50vh;
     }
     .htitle3 {
         text-align: center;
-        font-size: 28px;
+        font-size: 1.8rem;
         color: $primary-color;
         font-weight: bold;
-        position: relative;
-        top: 40px;
-        min-width: 100%;
+        margin: 2.5rem;
         @include tablet() {
-            margin-top: 20px;
-        }
-    }
-    .hpara {
-        text-align: center;
-        width: 80%;
-        margin: 100px auto 0 auto;
-        font-size: 25px;
-        color: $btn-bg-color;
-        @include tablet() {
-            max-width: 300px;
-            font-size: 20px;
-            margin: 60px auto 0 auto;
+            margin-top: 0.5rem;
         }
         @include mobile() {
-            margin-bottom: 50px;
+            margin-bottom: 2.18rem;
         }
         span {
             color: $btn-color;
+        }
+    }
+    .hpara {
+        width: 90%;
+        text-align: center;
+        font-size: 30px;
+        margin-left: 2rem;
+        color: $btn-bg-color;
+        @include tablet() {
+            font-size: 20px;
+            margin-bottom: 0.5rem;
+        }
+        @include mobile() {
+            font-size: 22px;
+            margin-bottom: 5rem;
+            margin-left: 1.5rem;
         }
     }
 }
