--- a/Scss/_secondsection.scss
+++ b/Scss/_secondsection.scss
@@ -6,7 +6,7 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
         @include mobile() {
-            max-width: 375px;
+            max-width: 25rem;
         }
         .htitle4 {
             max-width: 99vw;
@@ -14,7 +14,7 @@
             font-size: 28px;
             color: $primary-color;
             position: relative;
-            top: 40px;
+            top: 2.5rem;
             z-index: 2;
             @include mobile() {
                 font-size: 24px;
@@ -26,7 +26,7 @@
         .hpara {
             text-align: center;
             width: 99vw;
-            margin: 50px auto 0 auto;
+            margin: 3.1rem auto 0 auto;
             font-size: 30px;
             color: $btn-color;
             font-weight: bold;
@@ -36,14 +36,14 @@
         }
         .hgrid {
             width: 99vw;
-            margin-top: 60px;
+            margin-top: 3.75rem;
             height: 130vh;
             display: grid;
             grid-template-columns: 50% 50%;
             grid-template-rows: 50% 50%;
             @include tablet() {
-                max-width: 800px;
-                max-height: 800px;
+                max-width: 50rem;
+                max-height: 50rem;
             }
             @include mobile() {
                 display: grid;
@@ -85,7 +85,7 @@
             p {
                 text-align: center;
                 width: 100%;
-                margin: 230px auto 0 auto;
+                margin: 14.5rem auto 0 auto;
                 font-size: 35px;
                 font-weight: bold;
                 color: $btn-bg-color;
@@ -93,14 +93,14 @@
                 z-index: 5;
                 cursor: pointer;
                 @include tablet() {
-                    max-width: 360px;
-                    font-size: 30px;
-                    margin: 180px auto 0 auto;
+                    max-width: 22.5rem;
+                    font-size: 1.9rem;
+                    margin: 11rem auto 0 auto;
                     color: $btn-bg-color;
                 }
                 @include mobile() {
                     width: 99vw;
-                    margin-top: 80px;
+                    margin-top: 5rem;
                     color: $btn-bg-color;
                     font-weight: bold;
                 }
