--- a/Scss/_thirdsection.scss
+++ b/Scss/_thirdsection.scss
@@ -3,7 +3,7 @@
         display: flex;
         flex-direction: column;
         height: fit-content;
-        margin-bottom: 50px;
+        margin-bottom: 3rem;
         @include mobile() {
             width: 99vw;
         }
@@ -12,7 +12,7 @@
         color: $btn-bg-color;
         text-align: center;
         width: 80vw;
-        margin: 50px auto 0 auto;
+        margin: 3rem auto 0 auto;
         font-size: 35px;
         font-weight: bold;
         line-height: 1.5;
@@ -21,8 +21,8 @@
             font-size: 16px;
         }
         @include mobile() {
-            font-size: 11px;
-            margin-top: 80px;
+            font-size: 16px;
+            margin-top: 3.7rem;
         }
     }
 }
